<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UserFormActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/addEntry"
        android:textSize="28sp" />

    <EditText
        android:layout_marginTop="10dp"
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/personFirstName" />

    <EditText
        android:layout_marginTop="10dp"
        android:id="@+id/editTextLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/personLastName" />

    <EditText
        android:layout_marginTop="10dp"
        android:id="@+id/editTextPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/personPhone"
        android:inputType="phone" />

    <Button
        android:layout_marginTop="15dp"
        android:id="@+id/insertUserBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addEntry" />
</LinearLayout>